Fix(core): Fix scrollbar color

--- a/core/src/scrollbar/scrollbar.module.css
+++ b/core/src/scrollbar/scrollbar.module.css
@@ -1,25 +1,25 @@
 /* Firefox */
 :global(.light) .custom {
-	scrollbar-color: var(--gray-3) var(--gray-1);
+	scrollbar-color: var(--gray-2) var(--gray-0);
 }
 :global(.dark) .custom {
-	scrollbar-color: var(--gray-6) var(--gray-9);
+	scrollbar-color: var(--gray-5) var(--gray-8);
 }
 
 /* Everything but Firefox */
 :global(.light) .custom ::-webkit-scrollbar-thumb {
-	background-color: var(--gray-3);
+	background-color: var(--gray-2);
 }
 :global(.light) .custom ::-webkit-scrollbar-track,
 :global(.light) .custom ::-webkit-scrollbar-corner {
-	background-color: var(--gray-1);
+	background-color: var(--gray-0);
 }
 :global(.dark) .custom ::-webkit-scrollbar-thumb {
-	background-color: var(--gray-6);
+	background-color: var(--gray-5);
 }
 :global(.dark) .custom ::-webkit-scrollbar-track,
 :global(.dark) .custom ::-webkit-scrollbar-corner {
-	background-color: var(--gray-9);
+	background-color: var(--gray-8);
 }
 
 .custom ::-webkit-scrollbar {
